# zserio-cpp17

./: .clang-format  .gitignore  .gitmodules  LICENSE  README.md  _config.yml
poc/: CMakeLists.txt  README.md  main.cpp  test.zs
poc/runtime/: CMakeLists.txt
poc/runtime/zserio/: AnyHolder.h  Array.h  ArrayTraits.h  BitBuffer.h  BitSizeOfCalculator.h  BitStreamReader.h  BitStreamWriter.h  DataView.h  DeltaContext.h  Enums.h  HashCodeUtil.h  IPubsub.h  IService.h  IValidationObserver.h  JsonTokenizer.h  OptionalHolder.h  RuntimeArch.h  SerializeUtil.h  Span.h  StringView.h  TypeWrappers.h  UniquePtr.h  Variant.h  View.h  ZserioTreeCreator.h
poc/runtime/zserio/pmr/: PolymorphicAllocator.h  UniquePtr.h
runtime/src/: CMakeLists.txt
runtime/src/zserio/: AllocatorHolder.h  Any.h  Array.h  ArrayLengthException.cpp  ArrayLengthException.h  ArrayTraits.h  ArrayView.h  BitBuffer.h  BitPositionUtil.h  BitSizeOf.cpp  BitSizeOf.h  BitSizeOfCalculator.cpp  BitSizeOfCalculator.h  BitStreamReader.cpp  BitStreamReader.h  BitStreamWriter.cpp  BitStreamWriter.h  Bitmasks.h  BuiltInOperators.h  Bytes.cpp  Bytes.h  ChoiceCaseException.cpp  ChoiceCaseException.h  ConstraintException.cpp  ConstraintException.h  CppRuntimeException.cpp  CppRuntimeException.h  CppRuntimeVersion.h  DataView.h  DebugStringUtil.h  DeltaContext.h  Enums.h  Extended.h  ExtendedFieldException.cpp  ExtendedFieldException.h  FileUtil.cpp  FileUtil.h  GenericAccessor.h  HashCodeUtil.h  IIntrospectable.h  (+56 more)
runtime/src/zserio/pmr/: Any.h  BitBuffer.h  Bytes.h  IIntrospectableView.h  IReflectableData.h  IService.h  ITypeInfo.h  Map.h  Optional.h  PolymorphicAllocator.h  PropagatingPolymorphicAllocator.h  ReflectableData.h  Set.h  String.h  UniquePtr.h  Variant.h  Vector.h
runtime/src/zserio/std_pmr/: Any.h  BitBuffer.h  Bytes.h  IIntrospectableView.h  IReflectableData.h  IService.h  ITypeInfo.h  Map.h  Optional.h  Set.h  String.h  UniquePtr.h  Variant.h  Vector.h
runtime/test/: CMakeLists.txt  zs-test-object.sh
runtime/test/any_test/: AnyTest.cpp  AnyTest.h
runtime/test/test_object/: test_object.zs
runtime/test/test_object/pmr_allocator/: CreatorBitmask.cpp  CreatorBitmask.h  CreatorEnum.cpp  CreatorEnum.h  CreatorNested.cpp  CreatorNested.h  CreatorObject.cpp  CreatorObject.h  CreatorUnsignedEnum.cpp  CreatorUnsignedEnum.h  DebugStringObject.cpp  DebugStringObject.h  DebugStringParamObject.cpp  DebugStringParamObject.h  ReflectableBitmask.cpp  ReflectableBitmask.h  ReflectableChoice.cpp  ReflectableChoice.h  ReflectableEnum.cpp  ReflectableEnum.h  ReflectableNested.cpp  ReflectableNested.h  ReflectableObject.cpp  ReflectableObject.h  ReflectableUnion.cpp  ReflectableUnion.h  ReflectableUtilBitmask.cpp  ReflectableUtilBitmask.h  ReflectableUtilChoice.cpp  ReflectableUtilChoice.h  ReflectableUtilEnum.cpp  ReflectableUtilEnum.h  ReflectableUtilObject.cpp  ReflectableUtilObject.h  ReflectableUtilUnion.cpp  ReflectableUtilUnion.h  WalkerBitmask.cpp  WalkerBitmask.h  WalkerChoice.cpp  WalkerChoice.h  (+6 more)
runtime/test/test_object/polymorphic_allocator/: CreatorBitmask.cpp  CreatorBitmask.h  CreatorEnum.cpp  CreatorEnum.h  CreatorNested.cpp  CreatorNested.h  CreatorObject.cpp  CreatorObject.h  CreatorUnsignedEnum.cpp  CreatorUnsignedEnum.h  DebugStringObject.cpp  DebugStringObject.h  DebugStringParamObject.cpp  DebugStringParamObject.h  ReflectableBitmask.cpp  ReflectableBitmask.h  ReflectableChoice.cpp  ReflectableChoice.h  ReflectableEnum.cpp  ReflectableEnum.h  ReflectableNested.cpp  ReflectableNested.h  ReflectableObject.cpp  ReflectableObject.h  ReflectableUnion.cpp  ReflectableUnion.h  ReflectableUtilBitmask.cpp  ReflectableUtilBitmask.h  ReflectableUtilChoice.cpp  ReflectableUtilChoice.h  ReflectableUtilEnum.cpp  ReflectableUtilEnum.h  ReflectableUtilObject.cpp  ReflectableUtilObject.h  ReflectableUtilUnion.cpp  ReflectableUtilUnion.h  WalkerBitmask.cpp  WalkerBitmask.h  WalkerChoice.cpp  WalkerChoice.h  (+6 more)
runtime/test/test_object/ppmr_allocator/: CreatorBitmask.cpp  CreatorBitmask.h  CreatorEnum.cpp  CreatorEnum.h  CreatorNested.cpp  CreatorNested.h  CreatorObject.cpp  CreatorObject.h  (+38 more)
runtime/test/zserio/: AllocatorHolderTest.cpp  AnyTest.cpp  ArrayLengthExceptionTest.cpp  ArrayTest.cpp  ArrayViewTest.cpp  BitBufferTest.cpp  BitPositionUtilTest.cpp  BitSizeOfTest.cpp  BitStreamReaderTest.cpp  BitStreamTest.cpp  BitStreamWriterTest.cpp  BitmasksTest.cpp  BuiltInOperatorsTest.cpp  BytesTest.cpp  ChoiceCaseExceptionTest.cpp  CppRuntimeExceptionTest.cpp  CppRuntimeVersionTest.cpp  DataViewTest.cpp  DebugStringUtilTest.cpp  EnumsTest.cpp  ExtendedFieldExceptionTest.cpp  ExtendedTest.cpp  FileUtilTest.cpp  FloatUtilTest.cpp  GenericAccessorTest.cpp  HashCodeUtilTest.cpp  IntrospectableViewTest.cpp  JsonDecoderTest.cpp  JsonParserTest.cpp  JsonReaderTest.cpp  JsonTokenizerTest.cpp  JsonWriterTest.cpp  MissedOptionalExceptionTest.cpp  OptionalTest.cpp  OutOfRangeExceptionTest.cpp  ReflectableDataTest.cpp  ReflectableTest.cpp  ReflectableUtilTest.cpp  SerializeUtilTest.cpp  SqliteConnectionTest.cpp  (+14 more)
test/arguments/with_type_info_code/: CMakeLists.txt  ClangTidySuppressions.txt
test/errors/cpp17_generator_error/: CMakeLists.txt
test/language/array_types/: CMakeLists.txt  ClangTidySuppressions.txt
test/language/choice_types/: CMakeLists.txt  ClangTidySuppressions.txt
test/language/constraints/: CMakeLists.txt  ClangTidySuppressions.txt
test/language/member_access/: CMakeLists.txt  ClangTidySuppressions.txt
test/language/optional_members/: CMakeLists.txt  ClangTidySuppressions.txt
test/language/parameterized_types/: CMakeLists.txt  ClangTidySuppressions.txt
test/language/service_types/: CMakeLists.txt  ClangTidySuppressions.txt
test/language/templates/: CMakeLists.txt  ClangTidySuppressions.txt
test/language/union_types/: CMakeLists.txt  ClangTidySuppressions.txt
test/test_utils/: Assertions.h  CMakeLists.txt  ComparisonOperatorsTest.h  HashTest.h  LocalServiceClient.h  MemoryResources.h  ReadTest.h  SqlUtility.h  TestPubsub.h  ValidationObservers.h  WriteReadFileTest.h  WriteReadTest.h  ZserioErrorOutput.h
(+3422 files in other folders)
